Support publishing to maven repos so that it can work with jitpack :)